--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.2.2",
+    "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.33",
     "font-awesome": "^4.7.0",
     "vue": "^3.0.5",
