新增看板娘、完善文章展示页面

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^1.0.2-beta.33",
     "font-awesome": "^4.7.0",
     "vue": "^3.0.5",
+    "vue-live2d": "^1.2.4",
     "vue-router": "^4.0.4",
     "vuex": "^4.0.0"
   },
