--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.10",
     "@kangc/v-md-editor": "^2.2.2",
     "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.33",
@@ -15,8 +16,8 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.1.4",
+    "@vitejs/plugin-vue": "^1.2.1",
     "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.0.1"
+    "vite": "^2.2.1"
   }
 }
